[metadata]
name = dgc
version = 0.1.0
author = Yifeng Shi
author_email = yifengs@cs.unc.edu
description = a package for the paper "Deep Goal-Oriented Clustering"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/uncbiag/dgc
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.4

[options.packages.find]
where = src

